--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,14 @@
             android:orientation="horizontal">
 
         </LinearLayout>
-
+        <Button
+            android:id="@+id/app_usage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="APPUSAGE权限" />
         <Button
             android:id="@+id/gt_outer"
             android:layout_width="match_parent"
@@ -48,6 +55,7 @@
             android:id="@+id/reward_video"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
             android:onClick="onClick"
             android:text="激励视频" />
 
@@ -55,6 +63,7 @@
             android:id="@+id/native_common1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
             android:onClick="onClick"
             android:text="NATIVE通用布局1" />
 
@@ -62,6 +71,7 @@
             android:id="@+id/native_common2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
             android:onClick="onClick"
             android:text="NATIVE通用布局2" />
 
@@ -69,6 +79,7 @@
             android:id="@+id/native_common3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
             android:onClick="onClick"
             android:text="NATIVE通用布局3" />
     </LinearLayout>
