--- a/app/src/main/res/layout/ad_common_native_card_medium.xml
+++ b/app/src/main/res/layout/ad_common_native_card_medium.xml
@@ -10,12 +10,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@color/white"
-            card_view:cardCornerRadius="0dp">
+            android:background="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -90,9 +89,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_toLeftOf="@+id/common_sponsored_label"
+                            android:layout_weight="1"
                             android:ellipsize="marquee"
                             android:gravity="left|top"
-                            android:layout_weight="1"
                             android:singleLine="true"
                             android:text="Charge Master"
                             android:textColor="@color/black"
@@ -102,12 +101,13 @@
                             android:id="@+id/common_sub_title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="0"
                             android:ellipsize="marquee"
                             android:gravity="left|top"
                             android:singleLine="true"
-                            android:layout_weight="0"
                             android:textColor="@color/ad_text_sub"
-                            android:textSize="@dimen/sp_12" />
+                            android:textSize="@dimen/sp_12"
+                            android:visibility="gone" />
 
                         <TextView
                             android:id="@+id/common_social"
@@ -135,26 +135,19 @@
                     android:textColor="@color/ad_text_sub"
                     android:textSize="@dimen/sp_14" />
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </FrameLayout>
 
-        <android.support.v7.widget.CardView
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/common_action_btn"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/dp_4"
-            android:layout_marginTop="@dimen/dp_4"
-            card_view:cardCornerRadius="0dp">
-
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/common_action_btn"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:background="@color/colorPrimary"
-                android:gravity="center"
-                android:text="Learn More"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp_20"
-                android:textStyle="bold" />
-        </android.support.v7.widget.CardView>
+            android:layout_height="40dp"
+            android:background="@color/colorPrimary"
+            android:elevation="4dp"
+            android:gravity="center"
+            android:text="Learn More"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp_20"
+            android:textStyle="bold" />
     </LinearLayout>
 </FrameLayout>
