--- a/app/src/main/res/layout/ad_common_native_card_small.xml
+++ b/app/src/main/res/layout/ad_common_native_card_small.xml
@@ -9,12 +9,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/dp_4"
-            card_view:cardCornerRadius="0dp">
+            android:layout_marginBottom="@dimen/dp_4">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -106,13 +105,12 @@
                         android:textColor="@color/ad_text_sub"
                         android:textSize="@dimen/sp_12" />
 
-                    <android.support.v7.widget.CardView
+                    <FrameLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
                         android:layout_marginBottom="@dimen/dp_4"
-                        android:layout_marginTop="@dimen/dp_6"
-                        card_view:cardCornerRadius="0dp">
+                        android:layout_marginTop="@dimen/dp_6">
 
                         <android.support.v7.widget.AppCompatButton
                             android:id="@+id/common_action_btn"
@@ -126,7 +124,11 @@
                             android:textColor="@color/white"
                             android:textSize="@dimen/sp_14"
                             android:textStyle="bold" />
-                    </android.support.v7.widget.CardView>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </FrameLayout>
                 </LinearLayout>
             </LinearLayout>
 
@@ -143,6 +145,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:padding="4dp" />
-        </android.support.v7.widget.CardView>
+        </FrameLayout>
     </LinearLayout>
 </FrameLayout>
