--- a/adsdk/src/main/res/layout/native_card_full.xml
+++ b/adsdk/src/main/res/layout/native_card_full.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
-        android:paddingBottom="16dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="16dp">
 
         <android.support.percent.PercentRelativeLayout
             android:id="@+id/native_cover_info"
@@ -51,11 +51,11 @@
             android:layout_above="@+id/native_action_btn"
             android:layout_below="@+id/native_cover_info"
             android:layout_centerVertical="true"
-            android:gravity="center"
             android:layout_marginBottom="4dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
+            android:gravity="center"
             android:orientation="vertical">
 
             <ImageView
@@ -163,5 +163,16 @@
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:text="Learn More" />
+
+
+        <ImageView
+            android:id="@+id/native_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@android:drawable/list_selector_background"
+            android:clickable="true"
+            android:src="@android:drawable/ic_menu_close_clear_cancel" />
     </RelativeLayout>
 </FrameLayout>
