--- a/adsdk/src/main/res/drawable/ad_button_bg.xml
+++ b/adsdk/src/main/res/drawable/ad_button_bg.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="2dp"/>
-    <solid android:color="@color/colorBtnBlue"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape>
+            <corners android:radius="2dp" />
+            <solid android:color="@color/colorBtnBluePressed" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <corners android:radius="2dp" />
+            <solid android:color="@color/colorBtnBlue" />
+        </shape>
+    </item>
+</selector>
