--- a/adsdk/src/main/res/layout/native_card_full.xml
+++ b/adsdk/src/main/res/layout/native_card_full.xml
@@ -62,6 +62,7 @@
                 android:id="@+id/native_icon"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
+                android:layout_marginBottom="20dp"
                 android:contentDescription="@null"
                 android:visibility="gone" />
 
@@ -90,6 +91,7 @@
                         android:paddingLeft="4dp"
                         android:paddingRight="4dp"
                         android:paddingTop="2dp"
+                        android:singleLine="true"
                         android:text="AD"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="8sp" />
@@ -104,7 +106,7 @@
                         android:singleLine="true"
                         android:text="Charge Master"
                         android:textColor="@color/primaryTextColor"
-                        android:textSize="18sp" />
+                        android:textSize="20sp" />
 
                 </RelativeLayout>
 
@@ -112,6 +114,7 @@
                     android:id="@+id/native_sub_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:ellipsize="marquee"
                     android:gravity="center"
                     android:singleLine="true"
@@ -140,7 +143,7 @@
                 android:layout_marginBottom="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="20dp"
                 android:ellipsize="marquee"
                 android:gravity="center"
                 android:maxLines="3"
