--- a/adsdk/src/main/res/values/ad_colors.xml
+++ b/adsdk/src/main/res/values/ad_colors.xml
@@ -3,4 +3,5 @@
     <color name="primaryTextColor">#3F51B5</color>
     <color name="secondaryTextColor">#303F9F</color>
     <color name="colorBtnBlue">#7122e5</color>
+    <color name="colorBtnBluePressed">#AA7122e5</color>
 </resources>
