--- a/app/src/main/res/layout/ad_common_native_card_small.xml
+++ b/app/src/main/res/layout/ad_common_native_card_small.xml
@@ -1,158 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_gravity="center">
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/dp_4">
+            android:orientation="horizontal"
+            android:paddingBottom="14dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:paddingTop="14dp">
+
+            <RelativeLayout
+                android:id="@+id/common_cover_info"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_80"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/common_image_cover"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_80"
+                    android:contentDescription="@null"
+                    android:scaleType="fitXY" />
+
+                <RelativeLayout
+                    android:id="@+id/common_media_cover"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_80"
+                    android:contentDescription="@null"
+                    android:visibility="gone" />
+            </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/common_icon"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginRight="@dimen/dp_10"
+                android:contentDescription="@null"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/dp_14"
-                android:paddingLeft="@dimen/dp_6"
-                android:paddingRight="@dimen/dp_6"
-                android:paddingTop="@dimen/dp_14">
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-                <android.support.percent.PercentRelativeLayout
-                    android:id="@+id/common_cover_info"
-                    android:layout_width="@dimen/dp_180"
-                    android:layout_height="@dimen/dp_80">
+                <TextView
+                    android:id="@+id/common_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/common_sponsored_label"
+                    android:ellipsize="marquee"
+                    android:gravity="left|top"
+                    android:singleLine="true"
+                    android:text="Charge Master"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/sp_14" />
 
-                    <ImageView
-                        android:id="@+id/common_image_cover"
-                        android:layout_width="@dimen/dp_180"
-                        android:layout_height="@dimen/dp_80"
-                        android:contentDescription="@null"
-                        android:scaleType="fitXY" />
-
-                    <RelativeLayout
-                        android:id="@+id/common_media_cover"
-                        android:layout_width="@dimen/dp_180"
-                        android:layout_height="@dimen/dp_80"
-                        android:contentDescription="@null"
-                        android:visibility="gone" />
-                </android.support.percent.PercentRelativeLayout>
-
-                <ImageView
-                    android:id="@+id/common_icon"
+                <TextView
+                    android:id="@+id/common_sub_title"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:contentDescription="@null"
-                    android:layout_marginRight="@dimen/dp_10"
+                    android:ellipsize="marquee"
+                    android:gravity="left|top"
+                    android:singleLine="true"
+                    android:textColor="@color/ad_text_sub"
+                    android:textSize="@dimen/sp_12"
                     android:visibility="gone" />
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/common_social"
                     android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:ellipsize="marquee"
+                    android:gravity="left|top"
+                    android:singleLine="true"
+                    android:textColor="@color/ad_text_sub"
+                    android:textSize="@dimen/sp_12"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/common_detail"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:layout_marginTop="@dimen/dp_4"
+                    android:ellipsize="marquee"
+                    android:gravity="left|center_vertical"
+                    android:singleLine="true"
+                    android:textColor="@color/ad_text_sub"
+                    android:textSize="@dimen/sp_12" />
 
-                    <TextView
-                        android:id="@+id/common_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_toLeftOf="@+id/common_sponsored_label"
-                        android:ellipsize="marquee"
-                        android:gravity="left|top"
-                        android:singleLine="true"
-                        android:text="Charge Master"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/sp_14" />
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginBottom="@dimen/dp_4"
+                    android:layout_marginTop="@dimen/dp_6">
 
-                    <TextView
-                        android:id="@+id/common_sub_title"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:ellipsize="marquee"
-                        android:gravity="left|top"
-                        android:singleLine="true"
-                        android:textColor="@color/ad_text_sub"
-                        android:textSize="@dimen/sp_12"
-                        android:visibility="gone" />
-
-                    <TextView
-                        android:id="@+id/common_social"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:ellipsize="marquee"
-                        android:gravity="left|top"
-                        android:singleLine="true"
-                        android:textColor="@color/ad_text_sub"
-                        android:textSize="@dimen/sp_12"
-                        android:visibility="gone" />
-
-                    <TextView
-                        android:id="@+id/common_detail"
+                    <android.support.v7.widget.AppCompatButton
+                        android:id="@+id/common_action_btn"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dp_4"
-                        android:ellipsize="marquee"
-                        android:gravity="left|center_vertical"
-                        android:singleLine="true"
-                        android:textColor="@color/ad_text_sub"
-                        android:textSize="@dimen/sp_12" />
+                        android:layout_height="@dimen/dp_30"
+                        android:background="@color/colorPrimary"
+                        android:gravity="center"
+                        android:paddingLeft="@dimen/dp_10"
+                        android:paddingRight="@dimen/dp_10"
+                        android:text="Learn More"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_14"
+                        android:textStyle="bold" />
 
-                    <FrameLayout
+                    <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="left"
-                        android:layout_marginBottom="@dimen/dp_4"
-                        android:layout_marginTop="@dimen/dp_6">
-
-                        <android.support.v7.widget.AppCompatButton
-                            android:id="@+id/common_action_btn"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/dp_30"
-                            android:background="@color/colorPrimary"
-                            android:gravity="center"
-                            android:paddingLeft="@dimen/dp_10"
-                            android:paddingRight="@dimen/dp_10"
-                            android:text="Learn More"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/sp_14"
-                            android:textStyle="bold" />
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </FrameLayout>
-                </LinearLayout>
+                        android:layout_height="wrap_content" />
+                </FrameLayout>
             </LinearLayout>
+        </LinearLayout>
 
-            <TextView
-                android:id="@+id/common_sponsored_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ad_sponsored_icon"
-                android:gravity="center" />
+        <TextView
+            android:id="@+id/common_sponsored_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ad_sponsored_icon"
+            android:gravity="center" />
 
-            <RelativeLayout
-                android:id="@+id/common_ad_choices_container"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:padding="4dp" />
-        </FrameLayout>
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/native_adprivacy"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="right"
-        android:padding="10dp"
-        android:visibility="gone" />
+        <RelativeLayout
+            android:id="@+id/common_ad_choices_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:padding="4dp" />
+    </FrameLayout>
 </FrameLayout>
